# tweaky

./: .env.example  .gitignore  CONTEXT.md  Cargo.toml  README.md  roadmap.md  spec.md  thoughts.md
apps/editor/: Cargo.toml
apps/editor/qt_shell/: CMakeLists.txt
apps/editor/qt_shell/src/: MainWindow.cpp  MainWindow.h  main.cpp
apps/editor/src/: app.rs  cli.rs  main.rs  qt_shell.rs
crates/ai_adapter/: Cargo.toml
crates/ai_adapter/src/: lib.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs  skia_backend.rs
crates/scene_runtime/: Cargo.toml
crates/scene_runtime/src/: lib.rs
crates/scene_schema/: Cargo.toml
crates/scene_schema/src/: lib.rs
docs/: ai-contract.md  editor-shell.md
examples/: basic_poster.vsd.json  hybrid_scene.vsd.json  pelican_bicycle.vsd.json  pelican_bicycle_raster.vsd.json  shapes_study.vsd.json
schemas/: scene-document.schema.json
