[workspace]
members = [
  "apps/editor",
  "crates/ai_adapter",
  "crates/renderer",
  "crates/scene_runtime",
  "crates/scene_schema",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
